--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,19 +7,15 @@
   --background: #ffffff;
   --foreground: #171717;
   font-family: "Plus Jakarta Sans", sans-serif;
-
+  color: var(--foreground);
+  background: var(--background);
 }
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
+@media (prefers-color-scheme: dark) {
+  html.dark {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-} */
-
-body {
-  color: var(--foreground);
-  background: var(--background);
 }
 
 @layer base {
