feat: implement responsiveness

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,35 +18,13 @@
   }
 }
 
-@layer base {
-  input:-webkit-autofill,
-  textarea:-webkit-autofill,
-  select:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
-    box-shadow: 0 0 0 1000px transparent inset !important;
-    -webkit-text-fill-color: var(--foreground) !important; 
-    transition: background-color 5000s ease-in-out 0s;
-  }
-
-  input:-webkit-autofill:focus,
-  textarea:-webkit-autofill:focus,
-  select:-webkit-autofill:focus {
-    -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
-    box-shadow: 0 0 0 1000px transparent inset !important;
-  }
+textarea {
+  overflow: auto;
+  scrollbar-width: none; /* Firefox */
 }
 
-/* Firefox */
-input:-moz-autofill,
-textarea:-moz-autofill,
-select:-moz-autofill {
-  box-shadow: 0 0 0 1000px transparent inset !important;
-  color: var(--foreground) !important; 
+textarea::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
 }
 
-input:-moz-autofill:focus,
-textarea:-moz-autofill:focus,
-select:-moz-autofill:focus {
-  box-shadow: 0 0 0 1000px transparent inset !important;
-}
 
